--- a/package.json
+++ b/package.json
@@ -15,12 +15,38 @@
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/localize": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@progress/kendo-angular-buttons": "13.3.0",
+    "@progress/kendo-angular-common": "13.3.0",
+    "@progress/kendo-angular-dropdowns": "13.3.0",
+    "@progress/kendo-angular-grid": "^13.3.0",
+    "@progress/kendo-angular-icons": "13.3.0",
+    "@progress/kendo-angular-inputs": "13.3.0",
+    "@progress/kendo-angular-intl": "13.3.0",
+    "@progress/kendo-angular-l10n": "13.3.0",
+    "@progress/kendo-angular-layout": "13.3.0",
+    "@progress/kendo-angular-listview": "^13.3.0",
+    "@progress/kendo-angular-pager": "^13.3.0",
+    "@progress/kendo-angular-popup": "13.3.0",
+    "@progress/kendo-angular-progressbar": "13.3.0",
+    "@progress/kendo-angular-treeview": "13.3.0",
+    "@progress/kendo-angular-utils": "13.3.0",
+    "@progress/kendo-drawing": "^1.17.2",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-svg-icons": "^1.0.0",
+    "@progress/kendo-theme-default": "^6.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-angular-dateinputs": "13.3.0",
+    "@progress/kendo-angular-excel-export": "13.3.0",
+    "@progress/kendo-angular-label": "13.3.0",
+    "@progress/kendo-angular-pdf-export": "13.3.0",
+    "@progress/kendo-angular-dialog": "13.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.6",
